--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -20,7 +20,7 @@
 			<li>Fideos</li>
 			<li>Tomate</li>
 		</ul>
-		<img src="https://images.vexels.com/media/users/3/213551/isolated/lists/d263a7d03bdca55c4e1e80fb074a6848-palillos-chinos-de-tazon-de-fideos-dibujados-a-mano-negro.png " width="400px"; height="300px">
+		<img src="https://images.vexels.com/media/users/3/213551/isolated/lists/d263a7d03bdca55c4e1e80fb074a6848-palillos-chinos-de-tazon-de-fideos-dibujados-a-mano-negro.png ">
 	</div>
 
 </body>
